--- a/QQMusicPlayer/QQMusicPlayer/Info.plist
+++ b/QQMusicPlayer/QQMusicPlayer/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>cn</string>
 	<key>CFBundleDisplayName</key>
 	<string>AVPlayer</string>
 	<key>CFBundleExecutable</key>
@@ -73,8 +73,6 @@
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
